--- a/TennisRegressionModels.ipynb
+++ b/TennisRegressionModels.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+TjKJmfJOHZ2GRCTsvwpG",
+      "authorship_tag": "ABX9TyMMfcTcy1aeNMh0yCTMe+r/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "Practice building single feature and multiple feature linear regression models.\n",
-        "Data --tennis stats--from DS Codecademy course. Data is from the ATP (Assoc. of Tennis Professionals).\n",
+        "Data --tennis stats--from DS Codecademy course. Data is from the ATP (Assoc. of Tennis Professionals). Apparently, the ATP is only men. That's crap. I will do this with women's tennis data as well.\n",
         "\n",
         "Just like in crochet, this is a WIP. I will tweak it more, once I learn more.\n"
       ],
